--- a/trunk/Specify/help/SpecifyHelp/Workbench/DataSetProperties.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/DataSetProperties.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <head>
 <link href="../../main.css" rel="stylesheet" type="text/css" media="screen"></link>
-<title>Untitled Document</title>
+<title>Data Set Properties</title>
 </head>
 
 <body>
@@ -9,13 +9,13 @@
 <hr>
 <font size="-2"><br></font>
 <p>Data Set Properties includes the name and description of a Data Set.  </p>
-<p>To view and/or edit the properties of a Data Set, use the right mouse button to click on the Data Set. 'An Edit Properties' context menu appears:</p>
-<p><img src="../images/propertiesbutton.png" width="308" height="70"></p>
-<p>Click the 'Edit Properties' button with the left mouse button to open the Data Set Properties dialog: </p>
-<p align="center"><img src="../images/datasetproperties.png" width="754" height="262"></p>
+<p>To view and/or edit the properties of a Data Set, use the right mouse button to click on a Data Set. A context menu appearswithtwo options, select 'Edit Properties' :</p>
+<p align="center"><img src="../images/propertiesbutton.png"></p>
+<p>The Data Set Properties dialog will appear: </p>
+<p align="center"><img src="../images/datasetproperties.png"></p>
 <p align="center" class="imgcaption">Data Set Properties </p>
 <p align="left">&nbsp;</p>
-<p align="left">If a Data Set was created from an imported file, the path to the file will show in the 'Source File' area of the dialog. </p>
+<p align="left">If a Data Set was created from an imported file, the path to the file will be shown in the 'Source File' area of the dialog. </p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 </body>
