--- a/trunk/Specify/help/SpecifyHelp/Workbench/ExportExcelTemplate.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ExportExcelTemplate.html
@@ -2,34 +2,24 @@
 
 <head>
 <link href="../../main.css" rel="stylesheet" type="text/css" media="screen"></link>
-<title>Export Excel Template</title>
+<title>Export MS Excel Template</title>
 </head>
 
 <body>
-<h2>Export Excel Template</h2>
+<h2>Export MS Excel Template</h2>
 <hr />
 <p>The WorkBench is a staging area for pre-cataloged collections data  and is not intended as a replacement for editing  MS Excel row and column data. However, when creating MS Excel spreadsheets, it is recommended that the column headings match the Specify 6 fields. This will ensure the that data will import correctly into  the WorkBench and ultimately into Specify 6. To streamline this process, the WorkBench allows Data Set column headings to be exported as an MS Excel Template. </p>
-<p> If a Data Set does not exist with the column headings needed for the MS Excel file, then one will need to be created using the <a href="NewDataSet.html">New Data Set</a> action. </p>
-<p>The WorkBench will not allow an open Data Set to export. If a Data Set is disabled in the Sidebar it must be closed in the Workspace before it can be exported. </p>
+<p>The WorkBench will not allow an open Data Set to be exported. If a Data Set is disabled in the Sidebar it must be closed in the Workspace before it can be exported. </p>
 <p>The fastest way to export the Data Set column headings is to 'drag and drop' the Data Set item onto the 'Export Excel Template' action in the Sidebar. This eliminates the need to choose a Data Set  to export. </p>
 <p>Or, click the 'Export Excel Template' action in the Sidebar. This will open the following dialog:</p>
-<p align="center"><img src="../images/exportmsexcel.png" width="359" height="277" /></p>
+<p align="center"><img src="../images/exportmsexcel.png"></p>
 <p align="center" class="imgcaption">Export MS Excel Template</p>
 <p>&nbsp;</p>
-<p>Choose a Data Set from the dialog and click 'OK'. </p>
-<p>Next, name and save the export file using the following dialog:</p>
-<p align="center"><img src="../images/exportfilename.png" width="482" height="212" /></p>
+<p>Choose a Data Set from in the list and click 'OK'. </p>
+<p>Next, the file save dialog will appear: </p>
+<p align="center"><img src="../images/exportfilename.png"></p>
 <p align="center" class="imgcaption">Enter Export File Name </p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp; </p>
-<p><img src="../images/enterexportfilename.png" alt="Enter File Name" width="427" height="164" /> </p>
-<p>Type in exactly where the export file will to be located and what it will be named and click 'save'. </p>
+<p>Then select a location and enter a name for the new MS Excel file and click 'Save'. </p>
 <p>&nbsp;</p>
 </body>
 </html>
