--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
@@ -10,6 +10,7 @@
 <p>The WorkBench can easily import data from an MS Excel file into a new Data Set. </p>
 <p>To begin, click on the Import Data action on the Sidebar. A file dialog will appear to select the import file. </p>
 <p>To properly import the data from an MS Excel file, the WorkBench must first determine if the data includes column headings. The following information dialog appears after the file dialog:</p>
+<p>&nbsp;</p>
 <p><img src="../images/importbad.png" alt="bad import dialog" width="616" height="492"></p>
 <p>This dialog has incorrect information selected in the 'Data Import Options' section. This is obvious in both the 'Data Preview' window, which shows sporadic data, as well as in the warning icon and message shown under the 'Data Preview' window. </p>
 <p>To correct the information,   choose different selections  in the 'Data Import Options' section of the dialog. When the 'Data Import Options' are correct the 'Data Preview' window will display the CSV file correctly and the warning icon will disappear. The corrected dialog is shown below: </p>
