--- a/trunk/Specify/help/SpecifyHelp/Workbench/NewDataSet.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/NewDataSet.html
@@ -11,11 +11,11 @@
 <p>The first step in creating a New Data Set is to choose the columns that will be included in the new Data Set. This is achieved by either copying the column headings from an existing  Data Set or creating one from the list of fields available in Specify. </p>
 <p>If a Data Set exists with the same column headings, or map, needed for the new Data Set, simply drag the Data Set item onto the New Data Set action on the Sidebar. This eliminates the need to choose a Data Set from a file dialog. </p>
 <p>Note: Data Sets that are open in the Workspace are disabled in the Sidebar. To copy the column headings from an existing Data Set it must be first be closed.</p>
-<p>To create a new Data Set and choose new column headings, or to bypass the drag and drop feature and choose a Data Set to reuse, click the New Data Set item on the Sidebar. The following dialog will appear: </p>
+<p>Or, to create a new Data Set by bypassing  the drag and drop feature, choose a Data Set to reuse, click the New Data Set item on the Sidebar. The following dialog will appear: </p>
 <p align="center"><img src="../images/NewDataSet.png" alt="New Data Set" width="360" height="289"></p>
 <p align="center"><span class="imgcaption">New Data Set</span></p>
-<p>To copy column headings from an existing Data Set select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will appear which allows the new Data Set to be named and described. </p>
-<p>To select new column headings select the 'Create new Data Set mapping' button and click 'OK'. The Data Set Mapping Editor will appear:</p>
+<p>To copy column headings from an existing Data Set select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then appear, which allows the new Data Set to be named and described. </p>
+<p>To choose new column headings for the new Data Set select the 'Create new Data Set mapping' button and click 'OK'. The Data Set Mapping Editor will appear:</p>
 <p align="center"><img src="../images/DataSetMappingEditorClear.png" alt="Data Set Mapping Editor" width="1001" height="468"></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor</p>
 <p align="left">The Data Set Mapping Editor allows columns to be mapped, unmapped and reordered using the following buttons:</p>
@@ -40,26 +40,22 @@
     <td>reorder down </td>
     <td>moves the selected field down </td>
   </tr>
-  <tr>
-    <td><img src="../images/images old/linked_right.png" width="32" height="16"></td>
-    <td>link</td>
-    <td>identifies that the field is linked to the column </td>
-  </tr>
 </table>
 <p align="left">&nbsp; </p>
-<p align="left">The WorkBench provides a list of Specify fields to use as column headers in the new Data Set. This list is organized by Data Types. </p>
+<p align="left">The WorkBench provides a list of Specify fields to use as column headings in the new Data Set. This list is organized by Data Types. </p>
 <p align="left">To add a column heading:</p>
 <ol>
   <li> Select a Data Type, the available fields will appear in the 'Specify Fields' window. </li>
   <li>Select a field</li>
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button</li>
-  <li>The new field will appear in the Specify Fields (as shown below) </li>
+  <li>The new column heading will appear under both Data Set Columns and  Specify Fields(as shown below) </li>
 </ol>
+<p align="left">A <img src="../images/linked_right.png" width="32" height="16"> (link) icon identifies that the Specify field is mapped to the Data Set column. </p>
 <p align="center"><img src="../images/DataSetMappingEditor2.png" width="1000" height="460"></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor with one column added </p>
 <p align="left">&nbsp;</p>
-<p align="left">Once the Data Set Column list is complete click the 'OK' button. The Data Set Properties dialog will appear which allows the new Data Set to be named and described. </p>
-<p align="left">The edit the map see <a href="EditMapping.html">Edit Data Set Mapping</a>. </p>
+<p align="left">Once the 'Data Set Columns' list is complete click the 'OK' button. The Data Set Properties dialog will then appear, which allows the new Data Set to be named and described. </p>
+<p align="left">To edit the Data Set Mapping, see <a href="EditMapping.html">Edit Data Set Mapping</a>. </p>
 <p align="left">&nbsp; </p>
 <p>&nbsp;</p>
 <p>&nbsp; </p>
