--- a/trunk/Specify/help/SpecifyHelp/Workbench/Reports.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Reports.html
@@ -12,11 +12,11 @@
 <table width="75%" border="0" cellspacing="1" cellpadding="6">
   <tr>
     <td width="21%"><img src="../images/Reports16x16.png" width="16" height="16" /> Data Set Summary </td>
-    <td width="79%">Counts and groups  &quot;like&quot; items, then displays them in the report in descending order. This provides an easy way to find spelling errors as well as giving  an overview of the values for any given column. </td>
+    <td width="79%">Counts and groups  'like' items, then displays them in the report in descending order. This provides an easy way to find spelling errors as well as giving  an overview of the values for any given column. </td>
   </tr>
   <tr>
     <td><img src="../images/Label16x16.png" width="16" height="16" /> Basic Label </td>
-    <td>Creates a Basic Label from pre-set Data Set Fields. For more information see <a href="BasicLabel.html">Basic Label</a>. </td>
+    <td>Creates a Basic Label from pre-set Data Set columns. For more information see <a href="BasicLabel.html">Basic Label</a>. </td>
   </tr>
   <tr>
     <td><img src="../images/BarGraph16x16.png" width="16" height="16" /> Chart</td>
