--- a/trunk/Specify/help/SpecifyHelp/Workbench/Chart.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Chart.html
@@ -2,7 +2,7 @@
 
 <head>
  <link href="../../main.css" rel="stylesheet" type="text/css" media="screen"></link>
-<title>Untitled Document</title>
+<title>Chart</title>
 </head>
 
 <body>
