--- a/trunk/Specify/help/SpecifyHelp/Workbench/Overview.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Overview.html
@@ -22,13 +22,14 @@
 <hr>
 <p>The Specify 6 team spoke with many Collection Managers while designing the new Specify 6. While conducting interviews and reading evaluations it became clear that the community needed a seperate tool for working with data <em>before</em> it was cataloged into Specify. Some collections require this for entering legacy data, others want something small that they could take in  the field and others need to manipulate their  data before cataloging it in Specify and  enter it into a spreadsheet first, then Specify. </p>
 <p>The WorkBench was created to meet these specific needs within the community. It is the pre-catalog data manipulation component of Specify 6. It offers the following features: </p>
-<p>Import from CSV or MS Excel files</p>
-<p>Link an image to a record</p>
-<p>Create labels and reports</p>
-<p>View and edit in either a grid or form view </p>
-<p>Convert Latitude and Longitude formats</p>
-<p>Georeference<br>
-</p>
+<ul>
+  <li>Import from CSV or MS Excel files</li>
+  <li>Link an image to a record</li>
+  <li>Create labels and reports</li>
+  <li>View and edit in either a grid or form view </li>
+  <li>Convert Latitude and Longitude formats</li>
+  <li>Georeference</li>
+</ul>
 <h3><u>Introducing Data Sets</u></h3>
 <p>Data is entered, edited, organized and stored in a  Data Set. The WorkBench offers many features for manipulating the data within Data Sets before it is cataloged into Specify 6. </p>
 <p>One of the most important of these features is the organization of the data within the Specify fields. This is not only necessary for other features in the WorkBench to function properly, but also ensures that the data will upload correctly into Specify 6. The column headings for new Data Sets are chosen from a list of Specify fields. The column headings can then be renamed, but will still maintain a link to the original Specify field. These links are referred to as 'maps'. The maps can also be edited. </p>
